Changed service URLs to be provided by .env and updated README

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="recaptcha-key" content="<%= process.env.VUE_APP_RECAPTCHA_KEY %>">
+    <meta name="chatbot-url" content="<%= process.env.VUE_APP_CHATBOT_URL %>">
+    <meta name="kb-url" content="<%= process.env.VUE_APP_KNOWLEDGE_BASE_URL %>">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
